# system_idle

./: .gitignore  CHANGELOG.md  analysis_options.yaml  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: system_idle.dart
lib/src/: interface.dart  system_idle.dart  system_idle_linux.dart  system_idle_macos.dart  system_idle_windows.dart
macos/: system_idle.podspec
macos/Classes/: SystemIdlePlugin.swift
system_idle/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
system_idle/example/: example.dart
system_idle/lib/: system_idle.dart
system_idle/lib/src/: interface.dart  system_idle_windows.dart
system_idle_linux/: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml  temp.xml  wayland.yaml  x11.yaml
system_idle_linux/example/: example.dart
system_idle_linux/lib/: system_idle_linux.dart
system_idle_linux/lib/src/: bindings.dart  wayland.dart  wayland_bindings.dart  x11.dart  x11_bindings.dart
system_idle_linux/linux/: CMakeLists.txt
system_idle_linux/src/: CMakeLists.txt  Makefile  ffi_api.cpp  main  main.cpp  system_idle_linux.cpp  system_idle_linux.h  wayland-ext_idle_notify_v1.h  wayland-protocol.c  wayland.cpp  wayland.h  x11.cpp  x11.h
system_idle_macos/: .metadata  README.md  pubspec.yaml
system_idle_macos/lib/: system_idle_macos.dart
system_idle_macos/macos/: system_idle_macos.podspec
system_idle_platform_interface/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
system_idle_platform_interface/lib/: system_idle_platform_interface.dart
system_idle_platform_interface/lib/src/: stub.dart  (+2 more)
system_idle_windows/: LICENSE  README.md  pubspec.yaml
system_idle_windows/example/: example.dart  system_idle_windows_example.dart
system_idle_windows/lib/: system_idle_windows.dart
windows/: CMakeLists.txt  system_idle_plugin.cpp
(+8 files in other folders)
